--- a/Backend/package.json
+++ b/Backend/package.json
@@ -5,7 +5,8 @@
     "dotenv": "^16.5.0",
     "env": "^0.0.2",
     "express": "^5.1.0",
-    "mongoose": "^8.16.0"
+    "mongoose": "^8.16.0",
+    "root-workspace": "file:.."
   },
   "scripts": {
     "start": "node index.js",
