--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@mapbox/polyline": "^1.2.1",
+    "@react-google-maps/api": "^2.20.7",
     "axios": "^1.10.0",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.344.0",
